# looplit

./: .gitignore  LICENSE  README.md  lint-staged.config.js  package.json  pnpm-lock.yaml
backend/: build.py  pyproject.toml
backend/looplit/: __init__.py  canvas.py  context.py  decorators.py  logger.py  session.py  utils.py
backend/looplit/cli/: __init__.py
backend/looplit/state/: __init__.py  typing.py
examples/anthropic_multi_agent/: README.md  customer_support_agent.py  router_agent.py
examples/hello/: hello.py
examples/looplit_canvas/: looplit_canvas.py
examples/mistral_multi_agent/: README.md  customer_support_agent.py  router_agent.py
examples/openai_multi_agent/: README.md  customer_support_agent.py  router_agent.py
frontend/: .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  MonacoTheme.tsx  Router.tsx  SocketConnection.tsx  index.css  main.tsx  state.ts
frontend/src/components/: AutoResizeTextarea.tsx  EditorFormat.tsx  ImageDialog.tsx  ImageEditor.tsx  InlineText.tsx  JsonEditor.tsx  Kbd.tsx  Logo.tsx  Markdown.tsx  StateMergeEditor.tsx  ThemeProvider.tsx  ThemeToggle.tsx  YamlEditor.tsx  ZoomableImage.tsx
frontend/src/components/Canvas/: CanvasFloatingInput.tsx  Header.tsx  index.tsx
frontend/src/components/Message/: Content.tsx  RoleSelect.tsx  index.tsx
frontend/src/components/MessageComposer/: index.tsx
frontend/src/components/ui/: alert.tsx  (+15 more)
frontend/src/hooks/: useCurrentEditState.ts  useCurrentLineage.ts  useCurrentState.ts  useForkState.ts  useInteraction.ts  useSetEditState.ts
(+30 files in other folders)
