[tool.poetry]
name = "looplit"
version = "0.0.1"
keywords = []
description = ""
authors = ["Willy Douhard", "Dan Andre Constantini"]
license = "Apache-2.0"
homepage = "https://chainlit.io/"
documentation = "https://docs.chainlit.io/"
classifiers = []
repository = "https://github.com/willydouhard/looplit"
exclude = ["looplit/frontend/**/*"]
include = ["looplit/frontend/dist/**/*"]


[tool.poetry.scripts]
looplit = 'looplit.cli:run'

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
fastapi = ">=0.115.3,<0.116"
starlette = "^0.41.2"
watchfiles = "^0.20.0"
uvicorn = "^0.25.0"
python-socketio = "^5.11.0"
click = "^8.1.3"
lazify = "^0.4.0"
pydantic = ">=1,<3"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.mypy.dependencies]
mypy = "^1.13"


[tool.mypy]
python_version = "3.9"
disable_error_code = "annotation-unchecked"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "lazify",
    "nest_asyncio",
    "socketio.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
